# commoncode

./: .travis.yml  AUTHORS.rst  CHANGELOG.rst  NOTICE  README.rst  azure-pipelines.yml  commoncode.ABOUT  configure  configure.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/source/: index.rst
src/commoncode/: __init__.py  archive.py  cliutils.py  codec.py  command.py  compat.py  datautils.py  date.py  dict_utils.py  distro.py  fetch.py  fileset.py  filetype.py  fileutils.py  functional.py  hash.py  ignore.py  paths.py  resource.py  system.py  testcase.py  text.py  timeutils.py  urn.py  version.py
tests/: test_cliutils.py  test_cliutils_progressbar.py  test_codec.py  test_command.py  test_date.py  test_distro.py  test_fileset.py  test_filetype.py  test_fileutils.py  test_functional.py  test_hash.py  test_ignore.py  test_paths.py  test_resource.py  test_saneyaml.py  test_text.py  test_timeutils.py  test_urn.py  test_version.py
tests/commoncode/: test_cliutils.py  test_codec.py  test_command.py  test_date.py  test_fileset.py  test_filetype.py  test_fileutils.py  test_functional.py  test_hash.py  test_ignore.py  test_paths.py  test_resource.py  test_saneyaml.py  test_text.py  test_timeutils.py  test_urn.py  test_version.py
tests/data/fileutils/textfiles/: mac_newlines.txt  mac_newlines.txt.ABOUT
tests/data/resource/virtual_codebase/: codebase-for-cache-tests.json  combine-expected.json  combine-shared-directory-name-1.json  combine-shared-directory-name-2.json  combine-shared-directory-name-expected.json  docker-hello-world.json  (+13 more)
(+2 files in other folders)
