[wheel]
universal=1

[metadata]
license_file = apache-2.0.LICENSE
name = commoncode
author = nexB. Inc. and others
author_email = info@aboutcode.org
description = commoncode 
long_description = file:README.rst
url = https://github.com/nexB/commoncode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Utilities
keywords = 

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    attrs >= 18.1, !=20.1.0
    click >= 6.0.0
    text_unidecode >= 1.0
    Beautifulsoup4 >= 4.0.0, < 5.0.0
    requests >= 2.7.0, < 3.0.0
    intbitset >= 2.3.0, < 3.0
    saneyaml
setup_requires = setuptools_scm >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
